--- a/prometheus/docker-compose.yml
+++ b/prometheus/docker-compose.yml
@@ -1,37 +1,16 @@
-networks:
-  monitoring:
-    driver: bridge
-
-volumes:
-  prometheus_data: {}
-  grafana-data: {}
-
 services:
   prometheus:
-    image: prom/prometheus:latest
-    container_name: prometheus
-    restart: unless-stopped
+    image: prom/prometheus
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
-      - prometheus_data:/prometheus
-    command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
-      - "--storage.tsdb.path=/prometheus"
-      - "--web.console.libraries=/etc/prometheus/console_libraries"
-      - "--web.console.templates=/etc/prometheus/consoles"
-      - "--web.enable-lifecycle"
     ports:
-      - 9090:9090
-    networks:
-      - monitoring
+      - "9090:9090"
 
   grafana:
-    image: grafana/grafana-oss:latest
-    container_name: grafana
+    image: grafana/grafana
     ports:
       - "3000:3000"
     volumes:
-      - grafana-data:/var/lib/grafana
-    restart: unless-stopped
-    networks:
-      - monitoring
+      - grafana-storage:/var/lib/grafana
+    depends_on:
+      - prometheus
