--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,7 +1,8 @@
 global:
   scrape_interval: 15s
+
 scrape_configs:
-  - job_name: 'django_app'
-    metrics_path: '/prometheus/metrics'
+  - job_name: 'django'
     static_configs:
-      - targets: ['host.docker.internal:8080']
+      - targets: ['web:8000']
+    metrics_path: /prometheus/metrics
